fix: `/api/audio/metadata` Endpoint Issue